[FB] Vertical Tabs | Fixed website resizing when hovering over collapsed tabs and margin inside webpanels when collapsed tabs are active.

--- a/browser/themes/designs/options/native-verticaltab-hover.css
+++ b/browser/themes/designs/options/native-verticaltab-hover.css
@@ -74,6 +74,10 @@
   .webpanels {
     margin-left: -28px;
   }
+  
+  #sidebar-splitter2 {
+    position: relative;
+  }
 }
 
 #TabsToolbar:not(:hover) #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab .tab-content[class] > .tab-close-button[class] {
